--- a/website/source/com/janilla/templates/website/root.html
+++ b/website/source/com/janilla/templates/website/root.html
@@ -1,5 +1,5 @@
 <template id="admin">
-  <admin-panel data-path="${path}"></admin-panel>
+  <cms-admin data-path="${path}"></cms-admin>
 </template>
 <!--${header}-->
 <template id="header">
