--- a/blank/source/com/janilla/templates/blank/root.html
+++ b/blank/source/com/janilla/templates/blank/root.html
@@ -1,3 +1,3 @@
 <template id="admin">
-  <admin-panel data-path="${path}"></admin-panel>
+  <cms-admin data-path="${path}"></cms-admin>
 </template>
