--- a/website/source/com/janilla/templates/website/call-to-action.html
+++ b/website/source/com/janilla/templates/website/call-to-action.html
@@ -4,8 +4,9 @@
   </section>
   <section>
     <!--${links}-->
-    <template id="link">
-      <a href="${url}">${label}</a>
-    </template>
   </section>
 </article>
+
+<template id="link">
+  <a href="${url}" class="button">${label}</a>
+</template>
