--- a/website/source/com/janilla/templates/website/content.html
+++ b/website/source/com/janilla/templates/website/content.html
@@ -1,8 +1,9 @@
 <article>
   <!--${sections}-->
 </article>
+
 <template id="section">
-  <section>
+  <section data-size="${size}">
     <!--${richText}-->
   </section>
 </template>
