--- a/website/source/com/janilla/templates/website/index.html
+++ b/website/source/com/janilla/templates/website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Website Template</title>
     <link href="/images/favicon.svg" rel="icon" />
-    <link href="/style.css" rel="stylesheet" />
+    <link href="${href}" rel="stylesheet" />
     <script type="module" src="/script.js"></script>
   </head>
   <body>
