--- a/website/source/com/janilla/templates/website/posts.html
+++ b/website/source/com/janilla/templates/website/posts.html
@@ -1,8 +1,13 @@
 <main>
-  <h1>Posts</h1>
-  <p>Showing 1 - ${total} of ${total} Posts</p>
-  <!--${cards}-->
-  <template id="card">
-    <card-element data-slug="${slug}"></card-element>
-  </template>
+  <article>
+    <h1>Posts</h1>
+    <p>Showing 1 - ${total} of ${total} Posts</p>
+    <div>
+      <!--${cards}-->
+    </div>
+  </article>
 </main>
+
+<template id="card">
+  <card-element data-slug="${slug}"></card-element>
+</template>
