--- a/website/source/com/janilla/templates/website/root.html
+++ b/website/source/com/janilla/templates/website/root.html
@@ -43,19 +43,21 @@
 
 <template id="footer">
   <footer>
-    <a href="/">
-      <img src="/images/janilla-logo-light.svg" loading="lazy" />
-    </a>
-    <nav>
-      <!--${navItems}-->
-    </nav>
     <div>
-      <select>
-        <option value="auto">Auto</option>
-        <option value="light">Light</option>
-        <option value="dark">Dark</option>
-      </select>
-      <lucide-icon data-name="chevron-down"></lucide-icon>
+      <a href="/">
+        <img src="/images/janilla-logo-light.svg" loading="lazy" />
+      </a>
+      <nav>
+        <!--${navItems}-->
+      </nav>
+      <div>
+        <select>
+          <option value="auto">Auto</option>
+          <option value="light">Light</option>
+          <option value="dark">Dark</option>
+        </select>
+        <lucide-icon data-name="chevron-down"></lucide-icon>
+      </div>
     </div>
   </footer>
 </template>
