--- a/website/source/com/janilla/templates/website/archive.html
+++ b/website/source/com/janilla/templates/website/archive.html
@@ -5,15 +5,16 @@
   <section>
     <!--${articles}-->
   </section>
-  <template id="article">
-    <article>
-      <a href="/posts/${slug}">
-        <img src="${meta.image}" loading="lazy" />
-        <div>
-          <h3>${meta.title}</h3>
-          <p>${meta.description}</p>
-        </div>
-      </a>
-    </article>
-  </template>
 </article>
+
+<template id="article">
+  <article>
+    <a href="/posts/${slug}">
+      <img src="${meta.image.url}" loading="lazy" />
+      <div>
+        <h3>${meta.title}</h3>
+        <p>${meta.description}</p>
+      </div>
+    </a>
+  </article>
+</template>
