--- a/website/source/com/janilla/templates/website/card.css
+++ b/website/source/com/janilla/templates/website/card.css
@@ -3,6 +3,7 @@ card-element {
     background: rgb(10, 10, 10);
     border: 1px solid rgba(38, 38, 38, 0.8);
     border-radius: 0.2rem;
+    height: 100%;
   }
 
   a {
@@ -16,5 +17,9 @@ card-element {
 
   div {
     padding: 1rem;
+  }
+
+  p {
+    line-height: 1.5rem;
   }
 }
