--- a/website/source/com/janilla/templates/website/form-block.html
+++ b/website/source/com/janilla/templates/website/form-block.html
@@ -3,29 +3,35 @@
   <!--${form}-->
   <!--${confirmation}-->
 </article>
+
 <template id="intro">
   <section>
     <!--${introContent}-->
   </section>
 </template>
+
 <template id="form">
   <form>
     <!--${fields}-->
     <button>Submit</button>
   </form>
 </template>
+
 <template id="field">
   <label>
-    ${label}
+    <span>${label}</span>
     <!--${control}-->
   </label>
 </template>
+
 <template id="input-control">
-  <input type="${type}" name="${name}" />
+  <input type="${type}" name="${name}" required="${required}" />
 </template>
+
 <template id="textarea-control">
-  <textarea name="${name}" rows="3"></textarea>
+  <textarea name="${name}" rows="3" required="${required}"></textarea>
 </template>
+
 <template id="confirmation">
   <section class="confirmation">
     <!--${confirmationMessage}-->
