--- a/website/source/com/janilla/templates/website/hero.css
+++ b/website/source/com/janilla/templates/website/hero.css
@@ -17,33 +17,58 @@ hero-component {
 
   article {
     background: no-repeat top center / 1280px 80vh;
-    justify-content: center;
-    margin: -12.5rem -1rem -2.5rem;
+	justify-content: center;
+    margin-bottom: -2.5rem;
+    margin-top: -12.5rem;
     min-height: 80vh;
     padding: 1rem;
     position: relative;
+
+    @media (min-width: 1441px) {
+      align-items: center;
+      background: no-repeat center center / 100% auto;
+      margin-bottom: 0;
+      margin-top: -11.5rem;
+    }
   }
 
   section {
     gap: 1.5rem;
 	transform: translateY(-2rem);
+
+    @media (min-width: 1441px) {
+      align-items: center;
+      max-width: 36.5rem;
+    }
   }
 
   h1 {
     font-weight: normal;
-    font-size: 2.25em;
+    font-size: 2.25rem;
     line-height: 1.1111111;
+    margin: 0;
+
+    @media (min-width: 1441px) {
+      font-size: 3.5rem;
+      text-align: center;
+    }
   }
 
   p {
     a {
+      color: rgb(255, 255, 255);
       font-weight: 500;
       text-decoration: underline;
+    }
+
+    @media (min-width: 1441px) {
+      text-align: center;
     }
   }
 
   ul {
     a {
+      /*
       border: 1px solid rgba(38, 38, 38, 0.8);
       border-radius: 0.25rem;
       box-sizing: border-box;
@@ -53,14 +78,11 @@ hero-component {
       line-height: 1.25rem;
       padding: 0.5rem 1rem;
       text-decoration: none;
+      */
 
-      &.default {
-        background: rgb(248, 250, 252);
-        color: rgb(15, 23, 42);
-      }
-
-      &.outline {
+      &[data-appearance="OUTLINE"] {
         background: rgb(0, 0, 0);
+        border: 1px solid rgba(38, 38, 38, 0.8);
         color: rgb(255, 255, 255);
       }
     }
