--- a/website/source/com/janilla/templates/website/hero.html
+++ b/website/source/com/janilla/templates/website/hero.html
@@ -6,8 +6,9 @@
     </ul>
   </section>
 </article>
+
 <template id="item">
   <li>
-    <a href="${url}" class="${appearance}">${label}</a>
+    <a href="${url}" class="button" data-appearance="${appearance}">${label}</a>
   </li>
 </template>
