--- a/website/source/com/janilla/templates/website/posts.css
+++ b/website/source/com/janilla/templates/website/posts.css
@@ -1,14 +1,24 @@
 posts-element {
-  main,
-  div {
+  margin-top: 2rem;
+
+  main > article {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
+
+    > div {
+      @media (min-width: 1441px) {
+        display: grid;
+        gap: 2rem;
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
   }
 
   h1 {
     font-size: 2.25rem;
+    line-height: 2.5rem;
     margin-bottom: 3rem;
 
     & + p {
@@ -16,24 +26,5 @@ posts-element {
       font-weight: 600;
       margin-bottom: 1rem;
     }
-  }
-
-  article {
-    background: rgb(10, 10, 10);
-    border: 1px solid rgba(38, 38, 38, 0.8);
-    border-radius: 0.2rem;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  img {
-    display: block;
-    max-width: 100%;
-  }
-
-  div {
-    padding: 1rem;
   }
 }
