--- a/website/source/com/janilla/templates/website/root.css
+++ b/website/source/com/janilla/templates/website/root.css
@@ -4,8 +4,17 @@ root-element {
   gap: 4rem;
 
   > header,
-  > footer {
-    a {
+  > footer > div {
+    @media (min-width: 1441px) {
+      box-sizing: border-box;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 86rem;
+      padding: 2rem;
+      width: 100%;
+    }
+
+    a:not(:hover) {
       text-decoration: none;
     }
   }
@@ -14,11 +23,12 @@ root-element {
     align-items: center;
     display: flex;
     justify-content: space-between;
-    padding: 2rem 1rem;
+    /*padding: 2rem 1rem;*/
     position: relative;
     z-index: 20;
 
     a {
+      color: rgb(255, 255, 255);
       font-size: 0.875rem;
       font-weight: 500;
       line-height: 1.25rem;
@@ -39,25 +49,65 @@ root-element {
     }
   }
 
-  > footer {
-    border-top: 1px solid rgba(38, 38, 38, 0.8);
-    margin-top: 3rem;
-    padding: 2rem 1rem;
+  main {
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    gap: 4rem;
+    line-height: 1.75;
 
-    &,
+    > :not(.hero) {
+      padding: 0 1rem;
+
+      @media (min-width: 1441px) {
+        box-sizing: border-box;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 86rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        width: 100%;
+      }
+    }
+  }
+
+  > footer {
+    background: rgb(10, 10, 10);
+    border-top: 1px solid rgba(38, 38, 38, 0.8);
+    margin-top: 2rem;
+    /*padding: 2rem 1rem 0;*/
+
+    > div,
     nav {
       display: flex;
-      flex-direction: column;
       gap: 1rem;
+
+      @media (max-width: 1440px) {
+        flex-direction: column;
+      }
+
+      @media (min-width: 1441px) {
+        align-items: center;
+      }
     }
 
     img {
       height: 34px;
     }
 
-    div:has(select) {
+    nav {
+      @media (min-width: 1441px) {
+        order: 1;
+      }
+    }
+
+    div:has(> select) {
       align-self: start;
       position: relative;
+
+      @media (min-width: 1441px) {
+        margin-left: auto;
+      }
 
       lucide-icon {
         pointer-events: none;
