--- a/website/source/com/janilla/templates/website/search.html
+++ b/website/source/com/janilla/templates/website/search.html
@@ -1,12 +1,17 @@
-<article>
-  <h1>Search</h1>
-  <form>
-    <label for="search" class="visually-hidden">Search</label>
-    <input id="search" name="query" placeholder="Search" />
-    <button class="visually-hidden">submit</button>
-  </form>
-  <!--${cards}-->
-  <template id="card">
-    <card-element data-slug="${slug}"></card-element>
-  </template>
-</article>
+<main>
+  <article>
+    <form>
+      <h1>Search</h1>
+      <label for="search" class="visually-hidden">Search</label>
+      <input id="search" name="query" placeholder="Search" />
+      <button class="visually-hidden">submit</button>
+    </form>
+    <div>
+      <!--${cards}-->
+    </div>
+  </article>
+</main>
+
+<template id="card">
+  <card-element data-slug="${slug}"></card-element>
+</template>
