--- a/website/source/com/janilla/templates/website/style.css
+++ b/website/source/com/janilla/templates/website/style.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 @import "base.css";
 
-@import "admin.css";
 @import "archive.css";
 @import "banner.css";
 @import "call-to-action.css";
@@ -10,6 +9,7 @@
 @import "content2.css";
 @import "form-block.css";
 @import "hero.css";
+@import "lucide-icon.css";
 @import "media-block.css";
 @import "page.css";
 @import "post.css";
