--- a/website/source/com/janilla/templates/website/form-block.html
+++ b/website/source/com/janilla/templates/website/form-block.html
@@ -28,7 +28,7 @@
   <input type="${type}" name="${name}" required="${required}" />
 </template>
 
-<template id="textarea-control">
+<template id="cms-textarea">
   <textarea name="${name}" rows="3" required="${required}"></textarea>
 </template>
 
