--- a/website/source/com/janilla/templates/website/page.html
+++ b/website/source/com/janilla/templates/website/page.html
@@ -4,11 +4,11 @@
 </main>
 
 <template id="hero">
-  <hero-component data-path="${path}" class="hero"></hero-component>
+  <hero-element data-path="${path}" class="hero"></hero-element>
 </template>
 
 <template id="archive">
-  <archive-component data-path="${path}"></archive-component>
+  <archive-element data-path="${path}"></archive-element>
 </template>
 
 <template id="call-to-action">
@@ -16,7 +16,7 @@
 </template>
 
 <template id="content">
-  <content-component data-path="${path}"></content-component>
+  <content-element data-path="${path}"></content-element>
 </template>
 
 <template id="form-block">
