--- a/website/source/com/janilla/templates/website/post.html
+++ b/website/source/com/janilla/templates/website/post.html
@@ -29,8 +29,8 @@
   <banner-element data-path="${path}"></banner-element>
 </template>
 
-<template id="content2">
-  <content2-element data-path="${path}"></content2-element>
+<template id="rich-text">
+  <rich-text data-path="${path}"></rich-text>
 </template>
 
 <template id="media-block">
