--- a/website/source/com/janilla/templates/website/root.html
+++ b/website/source/com/janilla/templates/website/root.html
@@ -22,7 +22,7 @@
 </template>
 
 <template id="link">
-  <a href="${url}">${label}</a>
+  <a href="${href}" target="${target}">${text}</a>
 </template>
 
 <template id="page">
