--- a/website/source/com/janilla/templates/website/style.css
+++ b/website/source/com/janilla/templates/website/style.css
@@ -6,7 +6,7 @@
 @import "call-to-action.css";
 @import "card.css";
 @import "content.css";
-@import "content2.css";
+@import "rich-text.css";
 @import "form-block.css";
 @import "hero.css";
 @import "lucide-icon.css";
