--- a/blank/source/com/janilla/templates/blank/root.html
+++ b/blank/source/com/janilla/templates/blank/root.html
@@ -1,3 +1,14 @@
+<!--${admin}-->
+<!--${content}-->
+
 <template id="admin">
-  <cms-admin data-path="${path}"></cms-admin>
+  <cms-admin data-email="${email}" data-path="${path}"></cms-admin>
+</template>
+
+<template id="page">
+  <page-element data-slug="${slug}"></page-element>
+</template>
+
+<template id="not-found">
+  <not-found></not-found>
 </template>
