--- a/website/source/com/janilla/templates/website/page.html
+++ b/website/source/com/janilla/templates/website/page.html
@@ -26,3 +26,11 @@
 <template id="media-block">
   <media-block data-path="${path}"></media-block>
 </template>
+
+<template id="static">
+  <h1>Janilla Website Template</h1>
+  <p>
+    <a href="/admin">Visit the admin dashboard</a>
+    to make your account and seed content for your website.
+  </p>
+</template>
