--- a/website/source/com/janilla/templates/website/root.html
+++ b/website/source/com/janilla/templates/website/root.html
@@ -1,3 +1,4 @@
+<!--${admin}-->
 <!--${header}-->
 <!--${content}-->
 <!--${footer}-->
@@ -39,6 +40,10 @@
 
 <template id="search">
   <search-element data-query="${query}"></search-element>
+</template>
+
+<template id="not-found">
+  <not-found></not-found>
 </template>
 
 <template id="footer">
