--- a/website/source/com/janilla/templates/website/style.css
+++ b/website/source/com/janilla/templates/website/style.css
@@ -11,6 +11,7 @@
 @import "hero.css";
 @import "lucide-icon.css";
 @import "media-block.css";
+@import "not-found.css";
 @import "page.css";
 @import "post.css";
 @import "posts.css";
