--- a/website/source/com/janilla/templates/website/archive.html
+++ b/website/source/com/janilla/templates/website/archive.html
@@ -10,7 +10,7 @@
 <template id="article">
   <article>
     <a href="/posts/${slug}">
-      <img src="${meta.image.url}" loading="lazy" />
+      <img src="${meta.image.uri}" loading="lazy" />
       <div>
         <h3>${meta.title}</h3>
         <p>${meta.description}</p>
