--- a/website/source/com/janilla/templates/website/hero.html
+++ b/website/source/com/janilla/templates/website/hero.html
@@ -9,6 +9,6 @@
 
 <template id="item">
   <li>
-    <a href="${url}" class="button" data-appearance="${appearance}">${label}</a>
+    <a href="${uri}" class="button" data-appearance="${appearance}">${label}</a>
   </li>
 </template>
