--- a/website/source/com/janilla/templates/website/media-block.html
+++ b/website/source/com/janilla/templates/website/media-block.html
@@ -1,4 +1,4 @@
 <article>
-  <img src="${media.url}" loading="lazy" />
+  <img src="${media.uri}" loading="lazy" />
   <!--${media.caption}-->
 </article>
