--- a/website/source/com/janilla/templates/website/post.html
+++ b/website/source/com/janilla/templates/website/post.html
@@ -1,5 +1,5 @@
 <main>
-  <article class="hero" style='background-image: url("${heroImage.url}")'>
+  <article class="hero" style='background-image: url("${heroImage.uri}")'>
     <div></div>
     <section>
       <div>
