--- a/website/source/com/janilla/templates/website/card.html
+++ b/website/source/com/janilla/templates/website/card.html
@@ -1,6 +1,6 @@
 <article>
   <a href="/posts/${slug}">
-    <img src="${meta.image.url}" loading="lazy" />
+    <img src="${meta.image.uri}" loading="lazy" />
     <div>
       <h3>${meta.title}</h3>
       <p>${meta.description}</p>
