--- a/website/source/com/janilla/templates/website/hero.html
+++ b/website/source/com/janilla/templates/website/hero.html
@@ -2,13 +2,13 @@
   <section>
     <!--${richText}-->
     <ul>
-      <!--${items}-->
+      <!--${links}-->
     </ul>
   </section>
 </article>
 
-<template id="item">
+<template id="link">
   <li>
-    <a href="${uri}" class="button" data-appearance="${appearance}">${label}</a>
+    <a href="${uri}" class="button" data-appearance="${appearance}">${text}</a>
   </li>
 </template>
