--- a/website/source/com/janilla/templates/website/call-to-action.html
+++ b/website/source/com/janilla/templates/website/call-to-action.html
@@ -8,5 +8,5 @@
 </article>
 
 <template id="link">
-  <a href="${uri}" class="button">${label}</a>
+  <a href="${uri}" class="button">${text}</a>
 </template>
