--- a/website/source/com/janilla/templates/website/archive.css
+++ b/website/source/com/janilla/templates/website/archive.css
@@ -5,7 +5,7 @@ archive-element {
     gap: 4rem;
 
     article {
-      background: rgb(10, 10, 10);
+      background: light-dark(rgb(245, 245, 245), rgb(10, 10, 10));
       border: 1px solid rgba(38, 38, 38, 0.8);
       border-radius: 0.2rem;
     }
