--- a/website/source/com/janilla/templates/website/base.css
+++ b/website/source/com/janilla/templates/website/base.css
@@ -3,14 +3,18 @@
   src: url("/Geist-v1.4.01/webfonts/Geist-Regular.woff2");
 }
 
+:root {
+  color-scheme: light dark;
+}
+
 a,
 strong {
-  color: rgb(255, 255, 255);
+  color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
 }
 
 body {
-  background: rgb(0, 0, 0);
-  color: rgb(209, 213, 219);
+  background: light-dark(rgb(255, 255, 255), rgb(0, 0, 0));
+  color: light-dark(rgb(46, 42, 36), rgb(209, 213, 219));
   font-family: Geist;
   margin: 0;
 }
@@ -24,11 +28,11 @@ textarea {
 
 button,
 .button {
-  background: rgb(248, 250, 252);
+  background: light-dark(rgb(7, 5, 3), rgb(248, 250, 252));
   border: none;
   border-radius: 0.25rem;
   box-sizing: border-box;
-  color: rgb(15, 23, 42);
+  color: light-dark(rgb(240, 232, 213), rgb(15, 23, 42));
   cursor: pointer;
   font-size: 0.875rem;
   font-weight: 500;
@@ -55,7 +59,7 @@ ul {
 h1,
 h2,
 h3 {
-  color: rgb(255, 255, 255);
+  color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
 }
 
 h2 {
