--- a/website/source/com/janilla/templates/website/call-to-action.css
+++ b/website/source/com/janilla/templates/website/call-to-action.css
@@ -6,7 +6,7 @@ call-to-action {
   }
   
   article {
-    background: rgb(10, 10, 10);
+    background: light-dark(rgb(245, 245, 245), rgb(10, 10, 10));
     border: 1px solid rgba(38, 38, 38, 0.8);
     border-radius: 0.2rem;
     gap: 1rem;
@@ -20,21 +20,21 @@ call-to-action {
   }
 
   p {
-    color: rgb(209, 213, 219);
+    color: light-dark(rgb(46, 42, 36), rgb(209, 213, 219));
 
     a {
-      color: rgb(255, 255, 255);
+      color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
     }
   }
 
   section {
     > .button {
       /*
-      background: rgb(248, 250, 252);
+      background: light-dark(rgb(7, 5, 3), rgb(248, 250, 252));
       border: 1px solid rgba(38, 38, 38, 0.8);
       border-radius: 0.25rem;
       box-sizing: border-box;
-      color: rgb(15, 23, 42);
+      color: light-dark(rgb(240, 232, 213), rgb(15, 23, 42));
       font-size: 0.875rem;
       font-weight: 500;
       height: 2.75rem;
