--- a/website/source/com/janilla/templates/website/card.css
+++ b/website/source/com/janilla/templates/website/card.css
@@ -1,6 +1,6 @@
 card-element {
   article {
-    background: rgb(10, 10, 10);
+    background: light-dark(rgb(245, 245, 245), rgb(10, 10, 10));
     border: 1px solid rgba(38, 38, 38, 0.8);
     border-radius: 0.2rem;
     height: 100%;
