--- a/website/source/com/janilla/templates/website/hero.css
+++ b/website/source/com/janilla/templates/website/hero.css
@@ -56,7 +56,7 @@ hero-element {
 
   p {
     a {
-      color: rgb(255, 255, 255);
+      color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
       font-weight: 500;
       text-decoration: underline;
     }
@@ -81,9 +81,9 @@ hero-element {
       */
 
       &[data-appearance="OUTLINE"] {
-        background: rgb(0, 0, 0);
+        background: light-dark(rgb(255, 255, 255), rgb(0, 0, 0));
         border: 1px solid rgba(38, 38, 38, 0.8);
-        color: rgb(255, 255, 255);
+        color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
       }
     }
   }
