--- a/ecommerce/source/com/janilla/templates/ecommerce/index.html
+++ b/ecommerce/source/com/janilla/templates/ecommerce/index.html
@@ -7,6 +7,9 @@
     <!--${metaEntries}-->
     <link rel="icon" href="/images/favicon.svg" />
     <link rel="stylesheet" href="${href}" />
+    <!--
+    <script src="https://js.stripe.com/v3/"></script>
+    -->
     <script type="module" src="/script.js"></script>
   </head>
   <body>
