--- a/ecommerce/source/com/janilla/templates/ecommerce/variant-selector.html
+++ b/ecommerce/source/com/janilla/templates/ecommerce/variant-selector.html
@@ -11,7 +11,7 @@
 
 <template id="value">
   <label>
-    <input type="radio" name="${name}" value="${value}" />
+    <input type="radio" name="${name}" value="${value}" class="visually-hidden" />
     ${text}
   </label>
 </template>
