--- a/ecommerce/source/com/janilla/templates/ecommerce/base.css
+++ b/ecommerce/source/com/janilla/templates/ecommerce/base.css
@@ -40,6 +40,8 @@ input,
 select,
 textarea {
   color: inherit;
+  font-family: Geist;
+  font-size: 0.875rem;
 }
 
 button,
@@ -84,6 +86,15 @@ dialog {
   top: 0;
   width: 75vw;
   z-index: 101;
+
+  button:has([data-name="x"]) {
+    background: transparent;
+    color: gray;
+    padding: 0;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+  }
 }
 
 ::backdrop {
@@ -118,8 +129,6 @@ textarea {
   border: 1px solid rgba(38, 38, 38, 0.8);
   border-radius: 0.25rem;
   box-sizing: border-box;
-  font-family: Geist;
-  font-size: 0.875rem;
   padding: 0.5rem 0.75rem;
 
   &:focus {
