--- a/ecommerce/source/com/janilla/templates/ecommerce/hero.css
+++ b/ecommerce/source/com/janilla/templates/ecommerce/hero.css
@@ -1,35 +1,12 @@
 hero-element {
   article,
-  section,
-  ul {
-    display: flex;
-  }
-
-  article,
   section {
+    display: flex;
     flex-direction: column;
   }
 
-  article,
-  ul {
+  article {
     gap: 1rem;
-  }
-
-  article[style] {
-    background: no-repeat top center / 1280px 80vh;
-	justify-content: center;
-    margin-bottom: -2.5rem;
-    margin-top: -12.5rem;
-    min-height: 80vh;
-    padding: 1rem;
-    position: relative;
-
-    @media (min-width: 1441px) {
-      align-items: center;
-      background: no-repeat center center / 100% auto;
-      margin-bottom: 0;
-      margin-top: -11.5rem;
-    }
   }
 
   section {
@@ -63,28 +40,6 @@ hero-element {
 
     @media (min-width: 1441px) {
       text-align: center;
-    }
-  }
-
-  ul {
-    a {
-      /*
-      border: 1px solid rgba(38, 38, 38, 0.8);
-      border-radius: 0.25rem;
-      box-sizing: border-box;
-      display: inline-block;
-      font-size: 0.875rem;
-      height: 2.5rem;
-      line-height: 1.25rem;
-      padding: 0.5rem 1rem;
-      text-decoration: none;
-      */
-
-      &[data-appearance="OUTLINE"] {
-        background: light-dark(rgb(255, 255, 255), rgb(0, 0, 0));
-        border: 1px solid rgba(38, 38, 38, 0.8);
-        color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
-      }
     }
   }
 }
