--- a/ecommerce/source/com/janilla/templates/ecommerce/hero.html
+++ b/ecommerce/source/com/janilla/templates/ecommerce/hero.html
@@ -1,14 +1,5 @@
-<article style="${style}">
+<article>
   <section>
     <!--${richText}-->
-    <ul>
-      <!--${links}-->
-    </ul>
   </section>
 </article>
-
-<template id="link">
-  <li>
-    <a href="${uri}" class="button" data-appearance="${appearance}">${text}</a>
-  </li>
-</template>
