--- a/ecommerce/source/com/janilla/templates/ecommerce/root.css
+++ b/ecommerce/source/com/janilla/templates/ecommerce/root.css
@@ -25,13 +25,21 @@ root-element {
 
     > header {
       align-items: center;
+      border-bottom: 1px solid gray;
       display: flex;
       justify-content: space-between;
-      /*padding: 2rem 1rem;*/
+      padding: 1rem;
       position: relative;
       z-index: 20;
 
-      button + dialog {
+      > button {
+        background: transparent;
+        border: 1px solid gray;
+        color: white;
+        padding: 0.5rem;
+      }
+
+      > dialog {
         margin-left: 0;
       }
 
@@ -49,12 +57,6 @@ root-element {
         width: 34px;
       }
 
-      nav {
-        align-items: center;
-        display: flex;
-        gap: 0.75rem;
-      }
-
       lucide-icon {
         width: 1.25rem;
       }
@@ -67,7 +69,7 @@ root-element {
       gap: 4rem;
       line-height: 1.75;
 
-      > :not(.hero) {
+      > * {
         padding: 0 1rem;
 
         @media (min-width: 1441px) {
